# laplacian_kernel

./: .gitignore  LaplacianOp.py  bench_matvec_flag.py  combinatorial_cpu.py  combinatorial_gpu.py  filtration_gpu.py  laplacian.cu  laplacian_cpu.py  laplacian_gpu.py  meson.build  pyproject.toml  test.py  test_matvec_full.py
benchmarks/: bench_matvec_full.py
benchmarks/torus/: bench_matvec.py
data/: timings_a100.json  timings_gpu.json
examples/: benchmark_laplacian_o3_4k.py  benchmark_ripser_o3_4k.py  benchmark_torus.py  filter_o3.py  scaling.py  test_memray.py  torus.py
examples/fil-result/2024-05-23T13-02-43_619/: index.html  peak-memory.prof
examples/fil-result/2024-05-23T13-05-07_904/: index.html  peak-memory.prof
examples/fil-result/2024-05-23T13-09-05_623/: index.html  peak-memory.prof
examples/fil-result/2024-05-23T13-11-59_087/: index.html  peak-memory.prof
examples/fil-result/2024-05-23T13-12-40_277/: index.html  peak-memory.prof
examples/fil-result/2024-05-23T13-13-19_549/: index.html  peak-memory.prof
examples/fil-result/2024-05-23T13-13-28_698/: index.html  peak-memory.prof
notebooks/: LaplacianCuda.ipynb  benchmark_ripser.py  dev.ipynb  dev.py  dev_cpu.py  matvec.ipynb  profile_memory.ipynb  profile_um.py
notebooks/.ipynb_checkpoints/: dev-checkpoint.ipynb
old/: laplacian.cpp  laplacian.cu  laplacian.h  poly.py
profiles/: profile_laplacian.py
src/comb_laplacian/: __init__.py  combinatorial_cpu.py  combinatorial_gpu.py  filtration_cpu.py  filtration_gpu.py  laplacian_cpu.py  laplacian_gpu.py  meson.build  operators.py  sampler.py
src/comb_laplacian/.ipynb_checkpoints/: laplacian_cpu-checkpoint.py  laplacian_gpu-checkpoint.py  operators-checkpoint.py
tests/: test.py  test_matvec_sp.py  test_numba.py  test_primate.py
